crates/keron-lang/tests/corpus/errors/check/fn_reconcile_body.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `reconcile` is not allowed inside a value expression; resources emitted here would be silently dropped — move it to a top-level `reconcile` or to a top-level `for` / `if` statement
  --> 4:3
  |
4 |   reconcile target
  |   ^^^^^^^^^^^^^^^^^

error: `reconcile` is not allowed inside a value expression; resources emitted here would be silently dropped — move it to a top-level `reconcile` or to a top-level `for` / `if` statement
  --> 9:5
  |
9 |     reconcile target
  |     ^^^^^^^^^^^^^^^^^^^
